# ElmO

./: CMakeLists.txt  main.cpp
Diagnostic/DB/: messagesDB
Diagnostic/Model/Implementation/Commands/: SimpleCommand.h
Diagnostic/Model/Implementation/Commands/AT/: ATCommand.cpp  ATCommand.h
Diagnostic/Model/Implementation/Commands/ODB/: OBDCommand.cpp  OBDCommand.h  OBDHeaderCommand.cpp  OBDHeaderCommand.h  OBDPayloadCommand.cpp  OBDPayloadCommand.h
Diagnostic/Model/Implementation/ErrorMessages/Factory/: ErrorMessageDef.h  ErrorMessageFactory.cpp  ErrorMessageFactory.h
Diagnostic/Model/base/: Command.h  Ecu.h
Diagnostic/Model/base/MsgSystem/: ErrorResponse.h  Message.h  Reponse.h  Request.h  Response.h
Diagnostic/VCI/Implementation/: Elm327WLanVCI.cpp  Elm327WLanVCI.h
Diagnostic/VCI/base/: BaseVehicleCommunicationInterface.cpp  BaseVehicleCommunicationInterface.h
Diagnostic/VCI/base/WLAN/: IPUtils.h  Status.h  WLanVCI.h
Orchestrator/: ElmO.cpp  ElmO.h
